[package]
edition = "2021"
name = "senedteheven"
version = "0.6.0"

[dependencies]
bevy = { version = "0.15", default-features = true }
bevy-inspector-egui = "0.30.0"
bevy_ecs_tiled = "0.6"
bevy_ecs_tilemap = { version = "0.15", default-features = true }
bevy_rapier2d = "0.29.0"
tiled = { version = "0.14", features = ["world"] }
